The current maintainer of this library is the
RIPE NCC information services department.

You can reach us at ris@ripe.net.

2008-02-01 Erik Romijn <eromijn@ripe.net>
	* Fixed a few memleaks based on a patch from
	  Antony Antony <antony@phenome.org>
	  (Ticket NCC#2007064868)
	* Fixed compiling with --disable-ipv6 based on a patch
	  from Haniff Rahbari <hnrahbari@yahoo.com>
	  (Ticket NCC#2007111325)
	* Fixed a few warnings, mostly based on a patch from
	  Bruno Quoitin <bruno.quoitin@uclouvain.be>
	  (Ticket NCC#2007123069)
	* Made bgpdump's usage message nicer

2007-06-21 Erik Romijn <eromijn@ripe.net>
    * Fixed incorrect dump time display for some cases

2007-06-06 Erik Romijn <eromijn@ripe.net>
    * Set proper compile options to work on Mac OS X 10.4

2007-06-01 Erik Romijn <eromijn@ripe.net>
    * Fixed several bugs in 64-bit PC support and added
	  bzip2 support, credit goes to
	  Bernhard Tellenbach <betellen@tik.ee.ethz.ch>
	  for providing patches.
	* Fixed incorrect IPv6 nexthops in -M/-m output

2007-03-29 Erik Romijn <eromijn@ripe.net>
	* Fixed a serious segfault in the insertion of update dumps

2007-03-28 Erik Romijn <eromijn@ripe.net>
	* Fixed a large memory leak in TABLE_DUMP_V2 processing

2007-03-27 Erik Romijn <eromijn@ripe.net>
	* Fixed a bug causing segfaults on processing some MP_REACH_NLRI's

2007-03-09 Erik Romijn <eromijn@ripe.net>
	* Updated TABLE_DUMP_V2 support to comply with draft-ietf-grow-mrt-04

2007-03-07 Erik Romijn <eromijn@ripe.net>
	* Built in TABLE_DUMP_V2 support
	* Rename ..MESSAGE32 to ..MESSAGE_AS4
	* Fixed bug where -M always crashed

2007-02-01 Erik Romijn <eromijn@ripe.net>
	* Minor fix in ASN32 support

2006-10-20 Lorenzo Colitti <lorenzo@ripe.net>
	* Implement ASN32 support

2005-11-08 Young Hyun <youngh@caida.org>
	* IPv6 prefixes were not printed properly by bgpdump.

2004-02-10 Lorenzo Colitti <lorenzo@ripe.net>
	* Fix a stupid crash when reading truncated prefixes.

2004-02-09 Lorenzo Colitti <lorenzo@ripe.net>