@@ -3,6 +3,15 @@ RIPE NCC information services department.
 
 You can reach us at ris@ripe.net.
 
+2009-07-22 Ruben van Staveren <ruben@ripe.net>
+	* Fixed a case where during -M dumps aspaths where printed for entries that
+	  did not have their BGP_ATTR_AS_PATH flag set. Such entries will now print
+	  an empty field.
+	* Changed -fpic to -fPIC: newer gccs coerce -fpic to -fPIC any way.
+	  difference is that with -fpic the global offset table has a maximum size
+	* Fixed nit in getopt handling
+	* Added distclean target
+
 2008-02-01 Erik Romijn <eromijn@ripe.net>
 	* Fixed a few memleaks based on a patch from
 	  Antony Antony <antony@phenome.org>
